feat(1.2.4): Introduce in-memory orderbook